Connect add todo UI
- Added DataManager singleton as temporary local data layer
- Updated VC to reload data source and table on appear
- Added text field to new todo modal
etc

--- a/SwiftyDo/Base.lproj/Main.storyboard
+++ b/SwiftyDo/Base.lproj/Main.storyboard
@@ -86,7 +86,23 @@
                     <view key="view" contentMode="scaleToFill" id="4PN-Qp-wNp">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="What do you need to do?" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FAD-J6-IVw">
+                                <rect key="frame" x="16" y="80" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Bkt-n8-CzU"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="FAD-J6-IVw" firstAttribute="leading" secondItem="TFK-em-p4b" secondAttribute="leading" constant="16" id="q6c-WF-LnP"/>
+                            <constraint firstItem="TFK-em-p4b" firstAttribute="trailing" secondItem="FAD-J6-IVw" secondAttribute="trailing" constant="16" id="tzz-Bc-4aa"/>
+                            <constraint firstItem="FAD-J6-IVw" firstAttribute="top" secondItem="TFK-em-p4b" secondAttribute="top" constant="16" id="x7f-6r-OEu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TFK-em-p4b"/>
                     </view>
                     <navigationItem key="navigationItem" id="Q3C-Pt-GnG">
@@ -101,6 +117,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="todoText" destination="FAD-J6-IVw" id="klr-bz-c2b"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Ec-4t-f5l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
